--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -23,29 +23,29 @@
 
 
   <div (click)="showHide()" class="col-lg-9" style="color: black !important; background-size:cover; background-image: url(../assets/images/map.png)">
-    <div style="height:100%; width: 20%; background-color: white !important; color: black !important" [hidden]="show">
+    <div style="padding-top:200px; padding-left:15px;height:100%; width: 20%; background-color: white !important; color: black !important" [hidden]="show">
       
-      <img src="" />
-
-      <p style="color: blue !important">
+      <img src="../assets/images/tb_profile_201303_round.png" width="200px;" />
+      <br/><br/>
+      <p style="color: blue !important; font-size: 14px; font-weight: bold;">
         Donald Gladstone
       </p>
 
       <p style="color: grey !important">
-
         A-Z Finance
       </p>
 
-      <p>
+      <p style="color: darkgrey !important">
         235 Nicholson st <br/>
         Carlton, VIC  3053.
 
       </p>
 
 
-      <p>
-        Ph: (03) 8266 1161
-
+      <p style="color: grey !important">
+        (03) 8266 1161 <br/>
+        donald@atozfinance.com.au <br/>
+        atozfinance.com.au
       </p>
 
 
