--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,5 +1,5 @@
 
-    <div>
+    <div class="row">
         <h1>Life can be unpredictable sometimes</h1>
         <br/>
 
@@ -18,7 +18,7 @@
 
         </div>
         
-          <br/> 
+          <br/> <br/> <br/> 
 
 
           <a [routerLink]="['/calculator']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block" role="button" >
